# pail

./: .gitignore  Cargo.toml  config.example.toml  docker-compose.yml  flake.nix
.claude/: CLAUDE.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/review-article/: SKILL.md
.claude/skills/review-staged/: SKILL.md
.github/: README.md
.github/workflows/: ci.yml  docker.yml  generate.yml
docs/: README.md  core.md  observability.md
docs/ideas/: additional-feed-formats.md  cli-config-editor.md  config-export-import.md  cross-source-dedup.md  discord-source.md  failure-notifications.md  full-text-extraction.md  image-support.md  interactive-mode.md  mcp-tools.md  multi-user.md  nixos-module.md  opml-endpoint.md  predictive-scheduling.md  prometheus-metrics.md  shorter-digests.md  voice-transcription.md  web-ui.md
docs/specs/: agentic-benchmark.md  atom-feed.md  cli-config-editor.md  cli.md  config.md  daemon.md  docker.md  generation-engine.md  generation-strategies.md  interactive-mode.md  rss-sources.md  telegram.md
migrations/: 20260211_000001_initial_schema.sql  20260211_000002_phase1b.sql  20260212_000003_phase2_telegram.sql  20260213_000004_workspace_improvements.sql  20260218_000005_nullable_schedule.sql  20260302_000006_strategy_used.sql
src/: benchmark.rs  cleanup.rs  cli.rs  config.rs  config_edit.rs  daemon.rs  db.rs  error.rs  fetch.rs  fetch_tg.rs  generate.rs  main.rs  models.rs  pipeline.rs  poller.rs  scheduler.rs  server.rs  store.rs  strategy.rs  telegram.rs  tg_listener.rs  tg_session.rs  tui.rs
src/opencode_tools/: fetch-article.ts  package.json
src/strategies/: opencode.json
src/strategies/agentic/: opencode.json  prompt.md
src/strategies/brief/: prompt.md
src/strategies/simple/: prompt.md
