[package]
name = "pail"
version = "0.1.0"
edition = "2024"
description = "Personal AI Lurker — monitors RSS feeds, generates AI digest articles"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# IDs and timestamps
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# HTTP server
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Feed parsing (input)
feed-rs = "2"

# Feed generation (output)
atom_syndication = "0.12"

# Markdown
pulldown-cmark = "0.12"

# YAML frontmatter
gray_matter = "0.2"

# Cron expressions
cron = "0.15"

# Duration parsing
humantime = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"

# Constant-time comparison
subtle = "2"

# HTML to text
html2text = "0.14"

# Random token generation
rand = "0.9"

# Temp directories
tempfile = "3"

# Secure password input (no terminal echo)
rpassword = "5"

# Futures (needed for BoxFuture in grammers Session trait impl)
futures-core = "0.3"

# Telegram MTProto client (grammers ecosystem)
# Using git from Codeberg (canonical repo) — crates.io releases are infrequent
# and inter-crate version compatibility matters. All three from the same repo.
grammers-client = { git = "https://codeberg.org/Lonami/grammers", features = ["markdown", "html"] }
grammers-mtsender = { git = "https://codeberg.org/Lonami/grammers" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers", default-features = false }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers" }
